*Q: how is reflected in the dnssd txt record the fact that a connector has an udp port? I think that we always use tcp to init connections so this is not a real question
*should: make configurable (through Java and C++) the timeout for control queries
*could: dnssd client auto connect/reconnect
*could: dnssd client has a list of expected servers
*could: Service isa ServiceProxy!

1.
r
        fix:  service disapparitions were properly notified but browsing with a new service repository caused disappeared services to be reported as present
jaxb?
customizability for dnssd
fix 54 55

1.4.0
r4215
        fix:  a connector listener can now properly remove itself (stop listening) without throwing a concurrent modification exception
        fix:  problem in some cases when using removeAllConnectorListeners, some listeners might keep listening
        fix:  some LocalVariableListener received isValid calls for variables they were not registered to
        fix:  (API) createServiceRepository was improperly spelled (createServiceRepositoy) in ServiceFactory
        fix:  problem with netbeans when release contains castor generated .java files (these .java are not included any more)
        fix:  problem with connector and variable names containing non letter characters
        fix:  it is now impossible to add variables and connectors having problematic names (duplicate names, reserved ones, ...)
        impr: services default variables (owner, peerId, ...) now have same descriptions as in C++ implementation
        impr: now using JiveDNS in place of JmDNS (JiveDNS is a fork of JmDNS incorporating submitted patches and bug fixes)
        fix:  (jmdns) application refusing to shut down (was caused by jmdns) but still happens in certain cases (bug submitted to jivedns)
        fix:  (jmdns) some services were not unregistered when quitting applications with System.exit
        fix:  (avahi) problem with null pointer exception thrown in some cases when registration failed