@@ -14,10 +14,12 @@ In this files, you will find changes between java OMiSCID versions.
 
 1.
 r
+        fix:  trying to send message (or reply message) through a input connector now properly throws an exception
         fix:  service disapparitions were properly notified but browsing with a new service repository caused disappeared services to be reported as present
+
+
 jaxb?
 customizability for dnssd
-fix 54 55
 
 1.4.0
 r4215
